2014-12-15  Dana Burkart  <dburkart@apple.com>

        Merged r177113. <rdar://problem/19198539>

    2014-12-10  Beth Dakin  <bdakin@apple.com>

            WK2: Add initial support for immediate actions
            https://bugs.webkit.org/show_bug.cgi?id=139511

            Reviewed by Tim Horton.

            SPI needed for immediate actions.
            * WebCore.xcodeproj/project.pbxproj:
            * platform/spi/mac/NSImmediateActionGestureRecognizerSPI.h: Added.

2014-12-15  Matthew Hanson  <matthew_hanson@apple.com>

        Merge r177253. rdar://problem/19221935

    2014-12-12  Beth Dakin  <bdakin@apple.com>

            Need a fake mouse move after hiding data detectors UI
            https://bugs.webkit.org/show_bug.cgi?id=139608
            -and corresponding-
            rdar://problem/19221935

            Reviewed by Tim Horton.

            * WebCore.exp.in:

2014-12-13  Babak Shafiei  <bshafiei@apple.com>

        Merge r177254.

    2014-12-12  Mark Rowe  <mrowe@apple.com>

            [Mac] Work around a bug in dsymutil on older OS versions
            <https://webkit.org/b/139609> / <rdar://problem/16045763>

            Older versions of dsymutil are unable to write out more than 2GB of symbols per architecture.
            WebCore has recently passed that threshold. To work around this we will reduce the level of
            symbols included in the dSYM bundles on the affected OS versions.

            Reviewed by Geoff Garen.

            * Configurations/Base.xcconfig: Include line tables only in the debug symbols for production
            builds on OS X 10.8 and 10.9.
            * Configurations/DebugRelease.xcconfig: Include full symbols in debug and release builds since they
            do not make use of dSYMs.

2014-12-10  Matthew Hanson  <matthew_hanson@apple.com>

        Merge r176999. rdar://problem/19149219

    2014-12-08  Beth Dakin  <bdakin@apple.com>
