@@ -1,3 +1,13 @@
+2014-12-16  Dana Burkart  <dburkart@apple.com>
+
+        Merged r177124. <rdar://problem/19198539>
+
+    2014-12-10  Beth Dakin  <bdakin@apple.com>
+
+            Speculative build fix.
+
+            * platform/spi/mac/NSImmediateActionGestureRecognizerSPI.h:
+
 2014-12-15  Dana Burkart  <dburkart@apple.com>
 
         Merged r177113. <rdar://problem/19198539>
